Update page title in feature branch

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>📊 Список пользователей из базы данных</h1>
+    <h1>📊 Users from Database (Feature Branch)</h1>
 
     <table>
         <thead>
